--- a/KTX_Travel_Time_Analysis.ipynb
+++ b/KTX_Travel_Time_Analysis.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "19569505",
+   "execution_count": 3,
+   "id": "3ce7a716",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "9c266c98",
+   "execution_count": 4,
+   "id": "d36a9fd9",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "[66 rows x 6 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,13 +195,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6ea6062a",
+   "execution_count": 5,
+   "id": "c893a266",
    "metadata": {},
    "outputs": [],
    "source": [
-    " data.loc[data['Travel Time (Hours)']] =  "
+    "def convert_to_hours(time_obj):\n",
+    "    # Extract hours and minutes\n",
+    "    hours = time_obj.hour\n",
+    "    minutes = time_obj.minute\n",
+    "    # Convert to total hours\n",
+    "    total_hours = hours + minutes / 60.0\n",
+    "    return round(total_hours,2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4a7ddefc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply the conversion function to the 'Travel Time' column and create a new column for hours\n",
+    "data['Travel Time (Hours)'] = data['Travel Time (Hours)'].apply(convert_to_hours)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fb732c08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Train</th>\n",
+       "      <th>Number</th>\n",
+       "      <th>Departure Time</th>\n",
+       "      <th>Arrival Time</th>\n",
+       "      <th>Travel Time (Hours)</th>\n",
+       "      <th>Additional Information</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KTX</td>\n",
+       "      <td>1</td>\n",
+       "      <td>05:13:00</td>\n",
+       "      <td>07:49:00</td>\n",
+       "      <td>2.60</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>KTX</td>\n",
+       "      <td>3</td>\n",
+       "      <td>05:28:00</td>\n",
+       "      <td>08:15:00</td>\n",
+       "      <td>2.78</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>KTX</td>\n",
+       "      <td>5</td>\n",
+       "      <td>05:58:00</td>\n",
+       "      <td>08:42:00</td>\n",
+       "      <td>2.73</td>\n",
+       "      <td>Seodaegu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>KTX-Sancheon</td>\n",
+       "      <td>75</td>\n",
+       "      <td>06:03:00</td>\n",
+       "      <td>08:48:00</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>KTX</td>\n",
+       "      <td>7</td>\n",
+       "      <td>06:33:00</td>\n",
+       "      <td>09:21:00</td>\n",
+       "      <td>2.80</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>KTX-Sancheon</td>\n",
+       "      <td>9195</td>\n",
+       "      <td>21:33:00</td>\n",
+       "      <td>00:09:00</td>\n",
+       "      <td>2.60</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>KTX</td>\n",
+       "      <td>111</td>\n",
+       "      <td>21:38:00</td>\n",
+       "      <td>00:47:00</td>\n",
+       "      <td>3.15</td>\n",
+       "      <td>Seodaegu, Gupo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>KTX</td>\n",
+       "      <td>71</td>\n",
+       "      <td>21:58:00</td>\n",
+       "      <td>00:42:00</td>\n",
+       "      <td>2.73</td>\n",
+       "      <td>Seodaegu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>KTX</td>\n",
+       "      <td>73</td>\n",
+       "      <td>22:28:00</td>\n",
+       "      <td>01:03:00</td>\n",
+       "      <td>2.58</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>KTX</td>\n",
+       "      <td>97</td>\n",
+       "      <td>22:49:00</td>\n",
+       "      <td>01:11:00</td>\n",
+       "      <td>2.37</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>66 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Train  Number Departure Time Arrival Time  Travel Time (Hours)  \\\n",
+       "0            KTX       1       05:13:00     07:49:00                 2.60   \n",
+       "1            KTX       3       05:28:00     08:15:00                 2.78   \n",
+       "2            KTX       5       05:58:00     08:42:00                 2.73   \n",
+       "3   KTX-Sancheon      75       06:03:00     08:48:00                 2.75   \n",
+       "4            KTX       7       06:33:00     09:21:00                 2.80   \n",
+       "..           ...     ...            ...          ...                  ...   \n",
+       "61  KTX-Sancheon    9195       21:33:00     00:09:00                 2.60   \n",
+       "62           KTX     111       21:38:00     00:47:00                 3.15   \n",
+       "63           KTX      71       21:58:00     00:42:00                 2.73   \n",
+       "64           KTX      73       22:28:00     01:03:00                 2.58   \n",
+       "65           KTX      97       22:49:00     01:11:00                 2.37   \n",
+       "\n",
+       "   Additional Information  \n",
+       "0                     NaN  \n",
+       "1                     NaN  \n",
+       "2                Seodaegu  \n",
+       "3                     NaN  \n",
+       "4                     NaN  \n",
+       "..                    ...  \n",
+       "61                    NaN  \n",
+       "62         Seodaegu, Gupo  \n",
+       "63               Seodaegu  \n",
+       "64                    NaN  \n",
+       "65                    NaN  \n",
+       "\n",
+       "[66 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ad67f2a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
