--- a/KTX_Traffic_Analysis.ipynb
+++ b/KTX_Traffic_Analysis.ipynb
@@ -134,7 +134,7 @@
     }
    ],
    "source": [
-    "hsr_location_data = pd.read_excel('datasets/HSR_locations.xlsx')\n",
+    "hsr_location_data = pd.read_excel('datasets/HSR_Locations.xlsx')\n",
     "hsr_location_data.head()"
    ]
   },
@@ -465,7 +465,7 @@
     }
    ],
    "source": [
-    "hsr_data = pd.read_excel('datasets/HSR_locations.xlsx')\n",
+    "hsr_data = pd.read_excel('datasets/HSR_Locations.xlsx')\n",
     "hsr_data.head()"
    ]
   },
@@ -712,12 +712,12 @@
     }
    ],
    "source": [
-    "stop_numbers = 0\n",
+    "gyeongbu_stop_numbers = 0\n",
     "for i in range(len(gyeongbu_data['Stops'])):\n",
     "    my_string = gyeongbu_data['Stops'][i]\n",
     "    my_list = my_string.split(\",\")\n",
     "    print(my_list, len(my_list))\n",
-    "    stop_numbers += len(my_list)"
+    "    gyeongbu_stop_numbers += len(my_list)"
    ]
   },
   {
@@ -727,41 +727,35 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "58"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gyeongbu Train Number: 58 trains\n"
+     ]
     }
    ],
    "source": [
-    "train_num = len(gyeongbu_data['Stops'])\n",
-    "train_num"
+    "gyeongbu_train_num = len(gyeongbu_data['Stops'])\n",
+    "print(f'Gyeongbu Train Number: {gyeongbu_train_num} trains')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "f058bdc9",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "6.0"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Gyeongbu number of stops: 6.0 stops\n"
+     ]
     }
    ],
    "source": [
-    "average_stops = np.round(stop_numbers / train_num)\n",
-    "average_stops"
+    "gyeongbu_average_stops = np.round(gyeongbu_stop_numbers / gyeongbu_train_num)\n",
+    "print(f'Average Gyeongbu number of stops: {gyeongbu_average_stops} stops')"
    ]
   },
   {
@@ -777,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "2877cf4f",
    "metadata": {},
    "outputs": [
@@ -825,16 +819,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "055ec881",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average headway: 0.047 hours\n",
-      "Average headway: 2.845 minutes\n"
+     "ename": "NameError",
+     "evalue": "name 'train_num' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m average_headway_hours \u001b[38;5;241m=\u001b[39m time_diff \u001b[38;5;241m/\u001b[39m \u001b[43mtrain_num\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAverage headway: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnp\u001b[38;5;241m.\u001b[39mround(average_headway_hours,\u001b[38;5;241m3\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m hours\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAverage headway: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnp\u001b[38;5;241m.\u001b[39mround(average_headway_hours\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m60\u001b[39m,\u001b[38;5;241m3\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m minutes\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'train_num' is not defined"
      ]
     }
    ],
@@ -846,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "58010e23",
    "metadata": {},
    "outputs": [
@@ -865,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "3a9225b8",
    "metadata": {},
    "outputs": [
