--- a/KTX_Traffic_Analysis.ipynb
+++ b/KTX_Traffic_Analysis.ipynb
@@ -1143,7 +1143,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1157,7 +1157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
